Various small cosmetic improvements